# integration-templates

api/c/: api_to_json.c
api/cpp/: api_to_json.cpp
api/cs/: api_to_json.cs
api/elixir/: api_to_json.exs
api/go/: api_to_json.go
api/java/: APIToJson.java
api/javascript/: api_to_json.js
api/julia/: api_to_json.jl
api/matlab/: api_to_json.m
api/python/: api_to_json.py
api/r/: api_to_json.r
api/ruby/: api_to_json.rb
api/rust/: api_to_json.rs
api/scala/: api_to_json.scala
api/zig/: api_to_json.zig
bigquery/go/: bq_create_dataset.go  bq_create_table.go  bq_delete_dataset.go  bq_sql_run.go  bq_sql_to_cs_csv.go  go.mod
casandra/python/: api_to_cassandra.py  cassandra_.py
config/: parse_kwargs.py  readme.md  streamlined.py  test.py  test.toml
csv/Kotlin/: read_from_csv.kt
csv/rust/read_csv/: Cargo.toml  readme.md
file_convert/csv_to_parquet/: Cargo.toml  readme.md
file_convert/csv_to_parquet/src/: main.rs
file_convert/parquet_to_csv/: Cargo.toml
file_handler/: Cargo.toml  readme.md
file_handler/src/: main.rs
file_handler/src/csv_to_parquet/: ctp.rs  mod.rs
file_handler/src/parquet_to_csv/: mod.rs  ptc.rs
gcp_cloud_storage/etl/: .env  Cargo.toml  readme.md
gcp_cloud_storage/etl/src/: main.rs
gcp_cloud_storage/etl/src/bigquery_insert_data/: mod.rs
gcp_cloud_storage/etl/src/bigquery_to_cloud_storage/: btcs.rs  mod.rs
gcp_cloud_storage/etl/src/cloud_storage_clean_folder/: cscf.rs  mod.rs
gcp_cloud_storage/etl/src/cloud_storage_to_bigquery/: cstb.rs  mod.rs
gcp_cloud_storage/etl/src/cloud_storage_to_cloud_storage/: cstcs.rs  mod.rs
gcp_cloud_storage/etl/src/cloud_storage_to_local_storage/: cstls.rs  mod.rs
gcp_cloud_storage/etl/src/gcp_secrets_manager/: gsm.rs  mod.rs
gcp_cloud_storage/etl/src/local_storage_to_cloud_storage/: lstcs.rs  mod.rs
gcp_cloud_storage/go/: cs_clean_bucket_folder.go  cs_to_local.go  local_to_cs.go
json/go/: json_to_csv.go
mongodb/python/: api_to_mongodb.py  mongodb_.py
mssql/go/: bcp_bulk_insert.go
mssql/python/: api_to_mssql.py  mssql_.py  requirements.txt
postgresql/python/: api_to_postgresql.py  postgresql_.py  requirements.txt
snowflake/python/: api_to_snowflake.py  snowflake_.py  snowflake_select.py
(+4 files in other folders)
